# mo2-notes

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: build.yml
src/: CMakeLists.txt  mo2_notes_en.ts  resources.qrc
src/gui/: NotesWidget.cpp  NotesWidget.h
src/plugin/: IPanelInterface.h  IPluginPanel.cpp  IPluginPanel.h  MO2Notes.cpp  MO2Notes.h  MOPanelInterface.cpp  MOPanelInterface.h
